(users) Fix display of collections on mobile devices

--- a/astrobin/static/astrobin/scss/astrobin.scss
+++ b/astrobin/static/astrobin/scss/astrobin.scss
@@ -3343,6 +3343,7 @@ pre {
   @media screen and (max-width: 767px) {
     display: flex;
     justify-content:center;
+    flex-wrap: wrap;
   }
 
   .table {
